Hitting the proxy and auth go code

--- a/public/app/plugins/datasource/loginsight/partials/config.html
+++ b/public/app/plugins/datasource/loginsight/partials/config.html
@@ -1,3 +1,6 @@
+<datasource-http-settings current="ctrl.current" suggest-url="http://localhost:9200">
+</datasource-http-settings>
+
 <h3 class="page-heading">Log Insight Details</h3>
 
 <div class="gf-form-group">
@@ -24,7 +27,7 @@
     <div class="gf-form-inline">
         <div class="gf-form">
             <span class="gf-form-label width-9">Password</span>
-            <input class="gf-form-input width-30" type="password" ng-model='ctrl.current.secureJsonData.logInsightPassword' placeholder="password"></input>   
+            <input class="gf-form-input width-30" type="password" ng-model='ctrl.current.secureJsonData.password' placeholder="password"></input>   
             <info-popover mode="right-absolute">
                 <p>The password corresponding to the username to obtain a Log Insight session.</p>
             </info-popover>
