- Added support for TLSSkipVerification and Custom CA Certificate to verify SSL.

--- a/public/app/plugins/datasource/loginsight/partials/config.html
+++ b/public/app/plugins/datasource/loginsight/partials/config.html
@@ -11,7 +11,8 @@
         </div>
     </div>
 
-    <div class="gf-form-inline">
+  <h3 class="page-heading">Auth</h3>
+  <div class="gf-form-inline">
         <div class="gf-form">
             <span class="gf-form-label width-9">Username</span>
             <input class="gf-form-input width-30" type="text" ng-model='ctrl.current.jsonData.username' placeholder="username"></input>   
@@ -40,4 +41,38 @@
             </info-popover>
         </div>
     </div>
+    <div class="gf-form-inline">
+      <gf-form-checkbox class="gf-form" label="Skip TLS Verify" label-class="width-10"
+                        checked="ctrl.current.jsonData.tlsSkipVerify" switch-class="max-width-6"></gf-form-checkbox>
+    </div>
+    <div class="gf-form-inline">
+      <gf-form-checkbox class="gf-form" label="With CA Cert" tooltip="Needed for verifying self-signed TLS Certs"
+                        checked="ctrl.current.jsonData.tlsAuthWithCACert" label-class="width-11"
+                        switch-class="max-width-6"></gf-form-checkbox>
+    </div>
+    <div class="gf-form-group"
+         ng-if="ctrl.current.jsonData.tlsAuthWithCACert">
+      <div class="gf-form">
+        <h6>TLS Auth Details</h6>
+        <info-popover mode="header">TLS Certs are encrypted and stored in the Grafana database.</info-popover>
+      </div>
+      <div ng-if="ctrl.current.jsonData.tlsAuthWithCACert">
+        <div class="gf-form-inline">
+          <div class="gf-form gf-form--v-stretch">
+            <label class="gf-form-label width-7">CA Cert</label>
+          </div>
+          <div class="gf-form gf-form--grow" ng-if="!ctrl.current.secureJsonFields.tlsCACert">
+            <textarea rows="7" class="gf-form-input gf-form-textarea" ng-model="ctrl.current.secureJsonData.tlsCACert"
+                      placeholder="Begins with -----BEGIN CERTIFICATE-----"></textarea>
+          </div>
+
+          <div class="gf-form" ng-if="ctrl.current.secureJsonFields.tlsCACert">
+            <input type="text" class="gf-form-input max-width-12" disabled="disabled" value="configured">
+            <a class="btn btn-secondary gf-form-btn" href="#"
+               ng-click="ctrl.current.secureJsonFields.tlsCACert = false">reset</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
 </div>
